--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
-cmake-build-debug/
-.idea/
+/cmake-build-debug/
+/.idea/
